--- a/ch04/exercise.html
+++ b/ch04/exercise.html
@@ -10,57 +10,48 @@
 </head>
 
 <body>
-    <div class="wrapper">
-        <div class="header">
-            <h1><strong>Great House Company</strong></h1>
-        </div>
-        <div class="headline">
-            <h2 id="sale">House sale prices: Sellers should do this one thing to sell their house in 2019</h2>
-        </div>
-        <div class="opinion">
-            <h2>Our opinion</h2>
-            <p id="paragraph1">HOUSE prices in the UK have fallen to their lowest in six years as the nation inches
-                closer to Brexit
-                and
-                Theresa May’s plans for a deal with the EU continue to face challenges.</p><br>
-            <blockquote><q>For those desperate to sell this year, you need to be realistic on price and you can
-                    undercut
-                    those determined to maintain current asking prices.</q></blockquote>
-            <p id=author>----Professor Andrew Baum, Saïd Business School at Oxford University</p>
-        </div>
-        <div class="price">
-            <h2>House Price</h2>
-            <img id="image" src="https://www.home.co.uk/images/temp/asking_prices/am/rollingbytype-ampthill-town-201801-201901.gif"
-                alt="a pic of house price">
-        </div>
-        <div class="introduction">
-            <h2 id="managers">Our managers will help you.</h2>
-        </div>
-        <div class="contacts">
-            <ul class="contact1">
-                <li class="name" value="name1">Jeffrey Toobin: senior Manager</li>
-                <img src="https://i.imgur.com/B4ETpJv.jpg" alt="Jeffrey Toobin">
-                <p><a href="" title="find out more about him">Eight years of market experience </a></p>
-                <li class="phone" value="phone1">111-111111 <a href="">contact him</a></li>
-            </ul>
-            <ul class="contact2">
-                <li class="name" value="name2">Andrew Ross Sorkin: senior Manager</li>
-                <img src="https://i.imgur.com/B4ETpJv.jpg" alt="Andrew Ross Sorkin">
-                <p><a href="" title="find out more about him">Seven years of market experience </a></p>
-                <li class="phone" value="phone2">222-222222 <a href="">contact him</a></li>
-            </ul>
-            <ul class="contact3">
-                <li class="name" value="name3">Amy Chua: senior Manager</li>
-                <img src="https://i.imgur.com/B4ETpJv.jpg" alt="Amy Chua">
-                <p><a href="" title="find out more about her">Seven years of market experience </a></p>
-                <li class="phone" value="phone3">333-333333 <a href="">contact her</a></li>
-            </ul>
-        </div>
-        <div>
-            <footer>C2005,Great House Company, Fresno, CA 92532 </footer>
-        </div>
+    <div class="header">
+        <h1>Great House Company</h1>
     </div>
+    <div>
+        <h2><strong>The Prediction Of House Price</strong></h2>
+    </div>
+    <div class="section1">
+        <p id="box1">“However, as we approach the 29 March deadline, the market is beginning to respond to the UK’s
+            decision to leave
+            the EU. We’ve already seen indications that prices in London and the South East are beginning to dip, which
+            is
+            likely to continue as buyers finally let their pre-Brexit jitters play out.”<br>
 
+            Jonathan explained whatever the outcome with Theresa May’s Brexit deal, either direction will likely see a
+            slowing of the market.<br>
+
+            He continued: “There are still two routes we can take when it comes to Brexit – deal or no deal – and each
+            of
+            these could have a different impact on the housing market.<br>
+            “In either scenario, what we are likely to see after March is a slowing of the market in other areas of the
+            country, as London and the South East often lead the way when it comes to house price trends.<br></p>
+        <p id="box2">“However, I don’t anticipate any kind of immediate large-scale fall in prices – more a softening
+            of the market
+            as buyers hold their collective breath. The transition period, from March to December 2020, is key here.”<br>
+
+            Jonathan also explained how it’s more likely other economic factors would have an influence on house
+            prices, as
+            opposed to Brexit alone.<br>
+
+            “As we slowly disengage from the EU, it’s possible that wider economic factors could influence house
+            prices, with key trade deals (for example) impacting on house buyers’ general sense of confidence.”<br>
+
+            We are likely to see a temporary drop in the pound, which could spur foreign investment in the housing
+            market which Jonathan claims could keep the market steady until UK buyers’ confidence is increased.<br></p>
+
+    </div>
+    <h2><strong>Our Houses</strong></h2>
+    <div class="image">
+        <img src="https://i.imgur.com/KbwPb6Yb.jpg" title="wonderful house" alt="house pic">
+        <p>We have the best houses, whatever you want.</p>
+        <p>Do you like it?</p>
+    </div>
 
 
 
