--- a/ch04/experimance.html
+++ b/ch04/experimance.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="experimance.css" </head> <body>
+    <link rel="stylesheet" href="experimance.css">
+
+<body>
     <div class="wrapper">
         <div class="header">
             <h1><strong>Great House Company</strong></h1>
@@ -24,6 +26,32 @@
                     undercut
                     those determined to maintain current asking prices.</q></blockquote>
             <p id=author>----Professor Andrew Baum, Saïd Business School at Oxford University</p>
+            <p id="text">“However, as we approach the 29 March deadline, the market is beginning to respond to the UK’s
+                decision
+                to leave the EU. We’ve already seen indications that prices in London and the South East are beginning
+                to dip, which is likely to continue as buyers finally let their pre-Brexit jitters play out.”<br>
+
+                Jonathan explained whatever the outcome with Theresa May’s Brexit deal, either direction will likely
+                see a slowing of the market.<br>
+
+                He continued: “There are still two routes we can take when it comes to Brexit – deal or no deal – and
+                each of these could have a different impact on the housing market.<br>
+                “In either scenario, what we are likely to see after March is a slowing of the market in other areas of
+                the country, as London and the South East often lead the way when it comes to house price trends.<br>
+
+                “However, I don’t anticipate any kind of immediate large-scale fall in prices – more a softening of the
+                market as buyers hold their collective breath. The transition period, from March to December 2020, is
+                key here.”<br>
+
+                Jonathan also explained how it’s more likely other economic factors would have an influence on house
+                prices, as opposed to Brexit alone.<br>
+
+                “As we slowly disengage from the EU, it’s possible that wider economic factors could influence house
+                prices, with key trade deals (for example) impacting on house buyers’ general sense of confidence.”<br>
+
+                We are likely to see a temporary drop in the pound, which could spur foreign investment in the housing
+                market which Jonathan claims could keep the market steady until UK buyers’ confidence is increased.<br>
+            </p>
         </div>
         <div class="price">
             <h2>House Price</h2>
@@ -34,27 +62,28 @@
             <h2 id="managers">Our managers will help you.</h2>
         </div>
         <div class="contact1">
+            <img src="https://i.imgur.com/B4ETpJv.jpg" alt="Jeffrey Toobin">
             <ul>
-                <li class="name" value="name1">Jeffrey Toobin: senior Manager</li>
-                <img src="https://i.imgur.com/B4ETpJv.jpg" alt="Jeffrey Toobin">
-                <p><a href="" title="find out more about him">Eight years of market experience </a></p>
-                <li class="phone" value="phone1">111-111111 <a href="">contact him</a></li>
+                <li class="name" id="name1">Jeffrey Toobin: senior Manager</li>
+                <li><a href="" title="find out more about him">Eight years of market experience </a></li>
+                <li class="phone" id="phone1">111-111111 <a href="">contact him</a></li>
             </ul>
         </div>
         <div class="contact2">
+            <img src="https://i.imgur.com/B4ETpJv.jpg" alt="Andrew Ross Sorkin">
             <ul>
-                <li class="name" value="name2">Andrew Ross Sorkin: senior Manager</li>
-                <img src="https://i.imgur.com/B4ETpJv.jpg" alt="Andrew Ross Sorkin">
-                <p><a href="" title="find out more about him">Seven years of market experience </a></p>
-                <li class="phone" value="phone2">222-222222 <a href="">contact him</a></li>
+                <li class="name" id="name2">Andrew Ross Sorkin: senior Manager</li>
+                <li><a href="" title="find out more about him">Seven years of market experience </a></li>
+                <li class="phone" id="phone2">222-222222 <a href="">contact him</a></li>
             </ul>
         </div>
         <div class="contact3">
+            <img src="https://i.imgur.com/B4ETpJv.jpg" alt="Amy Chua">
             <ul>
-                <li class="name" value="name3">Amy Chua: senior Manager</li>
-                <img src="https://i.imgur.com/B4ETpJv.jpg" alt="Amy Chua">
-                <p><a href="" title="find out more about her">Seven years of market experience </a></p>
-                <li class="phone" value="phone3">333-333333 <a href="">contact her</a></li>
+                <li class="name" id="name3">Amy Chua: senior Manager</li>
+
+                <li><a href="" title="find out more about her">Seven years of market experience </a></li>
+                <li class="phone" id="phone3">333-333333 <a href="">contact her</a></li>
             </ul>
         </div>
         <div class="footer">
@@ -62,6 +91,6 @@
         </div>
     </div>
 
-    </body>
+</body>
 
 </html>
